Align place title to the left. Fix price getting out of bounce inside the rectangle when place name is too long

--- a/web_dynamic/static/styles/8-places.css
+++ b/web_dynamic/static/styles/8-places.css
@@ -43,8 +43,13 @@
 	font-size: 30px;
 	flex-grow: 1;
 	margin: 10px 0 30px 0;
-	text-align: center;
+	overflow: hidden;
+        word-wrap: break-word;
+	white-space: normal;
+	white-space: normal;
+	text-align: left
 }
+
 
 .container .places .price_by_night {
 	color: #FF5A5F;
